# -Rusty

./: README.md
RustyOS/: .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  Makefile  PROGRESS.md  QUICKSTART.md  README.md  README_KO.md  build.sh  clippy.toml  linker.ld  x86_64-unknown-none.json
RustyOS/.cargo/: build-std.toml  config.toml
RustyOS/.github/: README.txt
RustyOS/src/: allocator.rs  gdt.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  serial.rs  task.rs  vga.rs
aeos/: .gitignore  AEOS_KO.md  Cargo.toml  PROGRESS.md  README.md  build_result.txt
aeos/src/: lib.rs  main.rs
aeos/src/agents/: agent.rs  manager.rs  mod.rs
aeos/src/communication/: message_bus.rs  mod.rs
aeos/src/config/: mod.rs
aeos/src/core/: kernel.rs
aeos/src/resources/: manager.rs  mod.rs
aeos/src/scheduler/: mod.rs  task_scheduler.rs
aeos/src/storage/: db.rs
aeos/src/ui/handlers/: agents.rs  dashboard.rs  mod.rs  system.rs  tasks.rs
