[package]
name = "rusty_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.7"
crossbeam-queue = { version = "0.3", default-features = false }
linked-list-allocator = "0.10"
num_enum = "0.7"

[dependencies.vga]
version = "0.2"
optional = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.bootloader]
target = "x86_64-unknown-none"
