[package]
name = "aeos"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
sysinfo = "0.29"
job_scheduler_ng = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
crossbeam = "0.8"
futures = "0.3"
rand = "0.8"
lazy_static = "1.4"
colored = "2.1"
prettytable-rs = "0.10"
tera = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "aeos"
path = "src/main.rs"

[[bin]]
name = "aeos-cli"
path = "src/bin/cli.rs"

[profile.release]
opt-level = 3
lto = true
